--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,38 @@
-version:  '3.0'
+version: '3.0'
 services:
+
+  # postgres:
+  #   container_name: postgres_container
+  #   image: postgres
+  #   environment:
+  #     POSTGRES_USER: ${POSTGRES_USER:-postgres}
+  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-123456}
+  #     PGDATA: /data/postgres
+  #   volumes:
+  #     - ./data/postgres:/data/postgres
+  #     # - postgres:/data/postgres
+  #   ports:
+  #     - "5432:5432"
+  #   networks:
+  #     - app-data
+  #   restart: unless-stopped
+
+  # pgadmin:
+  #   container_name: pgadmin_container
+  #   image: dpage/pgadmin4
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
+  #     PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+  #     PGADMIN_CONFIG_SERVER_MODE: 'False'
+  #   volumes:
+  #     - ./data/pgadmin:/var/lib/pgadmin
+  #     # - pgadmin:/var/lib/pgadmin
+
+  #   ports:
+  #     - "${PGADMIN_PORT:-5050}:80"
+  #   networks:
+  #     - app-data
+  #   restart: unless-stopped
 
   mysql:
     image: mysql
@@ -11,48 +44,63 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     # restart: always
     environment:
-        MYSQL_ROOT_PASSWORD: 123456
-        # MYSQL_DATABASE: lottery_api_sale
-        # MYSQL_USER: zhaojun
-        # MYSQL_PASSWORD: zhaojun
+      MYSQL_ROOT_PASSWORD: 123456
+      # MYSQL_DATABASE: lottery_api_sale
+      # MYSQL_USER: zhaojun
+      # MYSQL_PASSWORD: zhaojun
     ports:
       - 3306:3306
     # deploy:
     #   restart_policy:
     #     condition: any
+    networks:
+      - app-data
 
   adminer:
     image: adminer
     restart: always
     ports:
       - 6600:8080
+    networks:
+      - app-data
 
-  redis-db:
-    image: redis
-    volumes:
-      - ./data/redis:/data
-      # - /etc/localtime:/etc/localtime:ro
-    # deploy:
-    #   restart_policy:
-    #     condition: any
-    ports:
-      - 6379:6379
+  # redis-db:
+  #   image: redis
+  #   volumes:
+  #     - ./data/redis:/data
+  #     # - /etc/localtime:/etc/localtime:ro
+  #     # deploy:
+  #     #   restart_policy:
+  #     #     condition: any
+  #   ports:
+  #     - 6379:6379
 
-  mongo:
-    image: mongo
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: 123456
-    ports:
-      - 27017:27017
+  # mongo:
+  #   image: mongo
+  #   restart: always
+  #   environment:
+  #     MONGO_INITDB_ROOT_USERNAME: root
+  #     MONGO_INITDB_ROOT_PASSWORD: 123456
+  #   ports:
+  #     - 27017:27017
+  #   networks:
+  #     - app-data
 
-  mongo-express:
-    image: mongo-express
-    restart: always
-    ports:
-      - 7700:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: 123456
+  # mongo-express:
+  #   image: mongo-express
+  #   restart: always
+  #   ports:
+  #     - 7700:8081
+  #   environment:
+  #     ME_CONFIG_MONGODB_ADMINUSERNAME: root
+  #     ME_CONFIG_MONGODB_ADMINPASSWORD: 123456
+  #   networks:
+  #     - app-data
 
+networks:
+  app-data:
+    driver: bridge
+
+# volumes:
+#   postgres:
+#   pgadmin:
