--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
   # redis-db:
   #   image: redis
   #   volumes:
-  #     - ./data/redis:/data
+  #     - ./data/redis/data:/data
   #     # - /etc/localtime:/etc/localtime:ro
   #   # deploy:
   #   #   restart_policy:
@@ -74,6 +74,36 @@ services:
   #   ports:
   #     - 8848:8848
 
+  postgres:
+    container_name: postgres_container
+    image: postgres
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-123456}
+      PGDATA: /data/postgres
+    volumes:
+       - ./data/postgres/data:/data/postgres
+    ports:
+      - "5432:5432"
+    networks:
+      - mynetwork
+    restart: unless-stopped
+  
+  pgadmin:
+    container_name: pgadmin_container
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    volumes:
+       - ./data/pgadmin/data:/var/lib/pgadmin
+    ports:
+      - "${PGADMIN_PORT:-5050}:80"
+    networks:
+      - mynetwork
+    restart: unless-stopped
+
   tdengine:
     image: tdengine/tdengine:latest
     restart: always
@@ -85,6 +115,8 @@ services:
       - 6041:6041
       - 6043-6060:6043-6060
       - 6043-6060:6043-6060/udp
+    networks:
+      - mynetwork
 
 
 networks:
